--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,11 @@
   </head>  
 
 
-<body>    
-  <button id="get"></button>  
+<body> 
+  <form>
+      <button id="get"></button>  
+  </form>   
+
 
   <script>
       const getBtn = document.getElementById('get');
