Added SOL bot 5

--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,13 @@
 
 <body> 
   <form>
-      <button id="get">GET</button>  
+      <button id = "get">GET</button>
+      <label id = "name"></label>
   </form>   
 
   <script>
       const getBtn = document.getElementById('get');
+      const groupName = document.getElementById('name');
 
       const baseUrl = 'http://18.130.149.113:5000/';
 
