--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 <body> 
   <form>
       <button id = "get">GET</button>
-      <h2 id = "name"></h2>
+      <h2> id = "name"></h2>
   </form>   
 
   <script>
