--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       const getBtn = document.getElementById('get');
       const groupName = document.getElementById('name');
 
-      const baseUrl = 'http://18.130.149.113:5000/';
+      const baseUrl = 'http://18.130.149.113:5000/info';
 
       getBtn.addEventListener('click', getBotInfo);
       async function getBotInfo(e) 
