--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,8 @@
 
 
 <body> 
-  <form>
-      <button id = "get">GET</button>
-      <h2> id = "name"></h2>
-  </form>   
+  <button id = "get">GET</button>
+  <label id = "name"> </label>  
 
   <script>
       const getBtn = document.getElementById('get');
