--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 
 <body> 
   <button id = "get">GET</button>
-  <p id = "name"> </p>  
+  <h4 id = "name"> </h4>  
 
   <script>
       const getBtn = document.getElementById('get');
