--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
 
 
 <body> 
-  <button id = "get">GET</button>
-  <h4 id = "name"> </h4>  
+  <button id = get">GET</button>
+  <p id = "name">name</p>  
 
   <script>
       const getBtn = document.getElementById('get');
