--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 
 <body> 
   <button id = get">GET</button>
-  <p id = "name">name</p>  
+  <label id = "name">name</label>  
 
   <script>
       const getBtn = document.getElementById('get');
