--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
 
           const botinfo = await result.json();
           const groupName = botinfo.info;
+          console.log(botinfo.info);
           console.log(result);
       }
 
