--- a/public/index.html
+++ b/public/index.html
@@ -21,9 +21,9 @@
           e.preventDefault();
           const result = await fetch(baseUrl, { method: 'GET'});
 
-          const botinfo = await result.json();
-          const groupName = botinfo;
-          console.log(botinfo);
+          //const botinfo = await result.json();
+          //const groupName = botinfo;
+          //console.log(botinfo);
           console.log(result);
       }
 
