--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       const getBtn = document.getElementById('get');
       const groupName = document.getElementById('name');
 
-      const baseUrl = 'https://18.130.149.113:5000/info';
+      const baseUrl = 'https://18.130.149.113:5000';
 
       getBtn.addEventListener('click', getBotInfo);
       async function getBotInfo(e) 
