--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,9 @@
                 method: 'GET'
           })
 
-          //const botinfo = await result.json();
-          //const groupName = botinfo;
-          //console.log(botinfo);
+          const botinfo = await result.json();
+          groupName = botinfo;
+          console.log(botinfo);
           console.log(res);
       }
 
