--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,9 @@
           })
 
           const botinfo = await result.json();
-          groupName = botinfo;
+          groupName = botinfo.botName;
           console.log(botinfo);
+          console.log(groupName);
           console.log(result);
       }
 
