--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <button id = "get">GET</button>
   <label id = "name">name</label>  
 
-<!--  <script>
+  <script>
       const getBtn = document.getElementById('get');
       const groupName = document.getElementById('name');
 
@@ -31,7 +31,7 @@
           console.log(result);
       }
 
-  </script>-->
+  </script>
 
 </body>
 
