--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,8 @@
       const getBtn = document.getElementById('get');
       const groupName = document.getElementById('name');
 
-      const baseUrl = 'http://18.130.149.113:5000';
+      <!-- const baseUrl = 'http://18.130.149.113:5000'; -->
+      const baseUrl = 'http://localhost:5000';
 
       getBtn.addEventListener('click', getBotInfo);
       async function getBotInfo(e) 
@@ -31,7 +32,7 @@
           console.log(result);
       }
 
-  </script>
+  </script>-->
 
 </body>
 
